--- a/tp3/styles.css
+++ b/tp3/styles.css
@@ -32,3 +32,14 @@ body {
     font-size: 20px; 
     z-index: 1000; 
 }
+
+#player-status {
+    position: absolute;
+    top: 100px;
+    left: 800px;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 50px;
+}
